# abundance

./: .gitignore  AGENTS.md  README.md  pyproject.toml  research_agent.md
docs/: audit_2026-05-13.md
scripts/: agent_loop.py  analyse_funding.py  backtest_baseline.py  backtest_carry.py  backtest_honest.py  close_all.py  dashboard.py  deploy.py  deploy_new.py  fetch_150_pairs.py  fetch_btc_data.py  fetch_funding.py  fetch_live.py  fetch_more_pairs.py  fetch_pairs.py  fetch_timeframes.py  monitor_daemon.py  research_agent.py  run_agents.py  run_autoresearch.py  run_paper_trade.py  run_workflow.py  test_abc_check.py  validate_data.py  write_report.py
src/abundance/backtesting/: carry_strategy.py  catalog.py  costs.py  lookahead_check.py  metrics.py
src/abundance/config/: settings.py
src/abundance/data/: binance_vision.py  ccxt_fetcher.py  fetcher.py  funding_rates.py  storage.py  validation.py
src/abundance/deployment/: adversarial.py  bridge.py  monitoring.py  registry.py  risk.py  validation.py
src/abundance/orchestration/: agents.py  spawner.py  workflow.py
src/abundance/paper_trading/: engine.py  testnet_client.py
src/abundance/strategies/: adaptive_trend.py  base.py  bollinger_reversion.py  cross_sectional_momentum.py  donchian_breakout.py  dual_thrust_breakout.py  dynamic_grid.py  ema_crossover.py  ensemble_donchian.py  funding_momentum_btcusdt.py  he_arbitrage.py  rsi_reversion.py  vol_breakout.py
src/abundance/strategies/composite/: adx_blend.py
src/abundance/strategies/mean_reversion/: bollinger_rsi.py
src/abundance/strategies/momentum/: grayscale_ma50.py
