[tool.poetry]
name = "abundance"
version = "0.1.0"
description = "Agentic crypto trading system — integrate mature OSS components with OpenClaw orchestration"
authors = ["Yi Khuen <chai.yi.khuen@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
ccxt = ">=4.0"
duckdb = ">=1.0"
polars = ">=1.0"
pyarrow = ">=15.0"
requests = ">=2.31"
httpx = ">=0.28"
tqdm = ">=4.66"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0"
loguru = ">=0.7"
tenacity = ">=8.0"
nautilus-trader = { version = ">=1.200,<2.0", python = ">=3.12,<3.15", optional = false }
langgraph = "^1.2.0"
langgraph-checkpoint-postgres = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=4.0"
ruff = ">=0.5"
mypy = ">=1.10"
pre-commit = ">=3.7"

[tool.poetry.scripts]
abundance = "abundance.cli:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=abundance --cov-report=term-missing"
